[project]
name = "epub2speech-flow"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "epub2speech (>=0.0.1,<0.0.2)"
]

[tool.poetry]
package-mode = false
packages = [{include = "epub2speech-flow", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
